name:                interactive-select
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            http://github.com/githubuser/interactive-select#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2010 Author Here
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
                     , ansi-terminal
                     , text-format
                     , terminal-size
  default-language:    Haskell2010
  default-extensions:  OverloadedStrings, TypeSynonymInstances, FlexibleInstances, GADTs
  ghc-options:         -Wall -fno-warn-name-shadowing -O3

executable interactive-select-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , interactive-select
                     , optparse-applicative
  default-language:    Haskell2010
  ghc-options:         -Wall -fno-warn-name-shadowing -O3

test-suite interactive-select-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , interactive-select
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/interactive-select
